# mlops-project-level0

./: Makefile  README.md  pyproject.toml
01_database/: 01_create_table.py  02_data_insert.py  03_data_generator_in_docker.py  Dockerfile  docker-compose.yaml
02_model_develop/: 01_db_train.py  02_db_validate_save_model.py
03_model_registry/: 01_save_model_to_registry.py  02_load_model_from_registry.py
06_api_serving/: 01_download_model.py  Dockerfile  docker-compose.yaml
06_api_serving/sk_model/: MLmodel  conda.yaml  input_example.json  model.pkl  python_env.yaml  requirements.txt
07_kafka/: target-docker-compose.yaml  target.Dockerfile
08_stream/: data_subscriber.py  stream-docker-compose.yaml
