[tool.poetry]
name = "mlops-project-level0"
version = "0.1.0"
description = ""
authors = ["minsoo9506 <ghktjd15gh>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
psycopg2-binary = "^2.9.9"
scikit-learn = "^1.4.0"
mlflow = "^2.9.2"
fastapi = "^0.109.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
